# miniprogram-minium-mcp

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
launcher/: minium-mcp.mjs
openspec/changes/add-minium-based-miniapp-acceptance-mcp/: design.md  tasks.md
openspec/changes/add-minium-based-miniapp-acceptance-mcp/specs/miniapp-acceptance-actions/: spec.md
openspec/changes/add-minium-based-miniapp-acceptance-mcp/specs/miniapp-acceptance-session/: spec.md
openspec/changes/archive/2026-04-02-add-minium-based-miniapp-acceptance-mcp/: design.md  proposal.md
openspec/changes/archive/2026-04-03-add-miniapp-multitouch-gestures/: design.md  proposal.md  tasks.md
openspec/specs/miniapp-acceptance-actions/: spec.md
openspec/specs/miniapp-acceptance-gestures/: spec.md
openspec/specs/miniapp-acceptance-session/: spec.md
scripts/: validate_multitouch_real.py
src/minium_mcp/: __init__.py  __main__.py
src/minium_mcp/adapters/: __init__.py
src/minium_mcp/adapters/minium/: __init__.py  runtime.py
src/minium_mcp/domain/: __init__.py  action_models.py  action_service.py  errors.py  responses.py  service_context.py  session_models.py  session_repository.py  session_service.py
src/minium_mcp/server/: __init__.py  app.py
src/minium_mcp/server/tools/: __init__.py  action_tools.py  session_tools.py
src/minium_mcp/support/: __init__.py  artifacts.py  config.py  i18n.py  logging.py
tests/: test_support.py
(+2 files in other folders)
