[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "minium-mcp"
version = "0.1.1-beta.0"
description = "基于 Minium 的本地 stdio 小程序验收型 MCP Server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "diaz-zeng", email = "diaz_zeng@outlook.com" },
]
dependencies = [
  "mcp[cli]>=1.0.0,<2.0.0",
  "minium>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
minium-mcp = "minium_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minium_mcp"]
